update from github page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             .title {
                 font-size: 50px;
             }
+            small{
+            	font-size: 20px;
+            	display: block;
+            }
         </style>
 
 </head>
@@ -46,7 +50,9 @@
 <div class="container">
             <div class="content">
                 <div class="title">
-				Bone Salade Ver 1.0
+				Bone Salad Ver 1.0
+				<br>
+				<small>Just Load ur Routes and it is all done... :P</small>
 				<br>
                 <br>
 				<a href="#login">Login</a> || <a href="#home">Home</a>
@@ -58,7 +64,7 @@
 
 	
 
-	
+
 
 </body>
 </html>
